# Neural-networks-from-scratch

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  main.cpp
ActivationFunction/: ActivationFunction.cpp  ActivationFunction.h
DataLoader/: DataLoader.cpp  DataLoader.h
Layer/: Layer.cpp  Layer.h
LossFunction/: LossFunction.cpp  LossFunction.h
MNIST/: MNIST.cpp  MNIST.h
Matrix/: Matrix.cpp  Matrix.h
NetWork/: NetWork.cpp  NetWork.h
NeuralNetwork/: NeuralNetwork.cpp  NeuralNetwork.h
